--- a/package.json
+++ b/package.json
@@ -5,15 +5,27 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "dev": "ts-node-dev --no-notify --respawn --transpile-only server/index.ts",
+    "generate": "prisma generate"
   },
   "dependencies": {
-    "vue": "^3.0.0",
-    "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "@apollo/client": "^3.3.15",
+    "@prisma/client": "2.20.1",
+    "@vue/apollo-composable": "^4.0.0-alpha.12",
+    "apollo-server": "^2.23.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^15.5.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.9.0",
+    "prisma": "2.20.1",
+    "react": "^17.0.2",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/graphql-fields": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -28,6 +40,11 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^7.0.0",
     "lint-staged": "^9.5.0",
+    "sass": "^1.32.11",
+    "sass-loader": "^10.1.1",
+    "ts-node": "^9.1.1",
+    "ts-node-dev": "^1.1.6",
+    "typegraphql-prisma": "^0.13.0",
     "typescript": "~4.1.5"
   },
   "gitHooks": {
