--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@apollo/client": "^3.3.15",
     "@prisma/client": "2.20.1",
     "@vue/apollo-composable": "^4.0.0-alpha.12",
-    "apollo-server": "^2.23.0",
+    "apollo-server-express": "^2.24.1",
+    "body-parser-graphql": "^1.1.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.0",
     "graphql-fields": "^2.0.3",
     "graphql-scalars": "^1.9.0",
