--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vue/apollo-composable": "^4.0.0-alpha.12",
     "apollo-server-express": "^2.24.1",
     "body-parser-graphql": "^1.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.5.0",
@@ -24,7 +25,8 @@
     "react": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/graphql-fields": "^1.3.3",
