--- a/package.json
+++ b/package.json
@@ -3,61 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "dev": "ts-node-dev --no-notify --respawn --transpile-only server/index.ts",
-    "generate": "prisma generate"
+    "start:server": "yarn workspace @bis-lists/server start",
+    "start:front": "yarn workspace @bis-lists/front start"
   },
-  "dependencies": {
-    "@apollo/client": "^3.3.15",
-    "@prisma/client": "2.20.1",
-    "@vue/apollo-composable": "^4.0.0-alpha.12",
-    "apollo-server-express": "^2.24.1",
-    "body-parser-graphql": "^1.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "graphql": "^15.5.0",
-    "graphql-fields": "^2.0.3",
-    "graphql-scalars": "^1.9.0",
-    "prisma": "2.20.1",
-    "react": "^17.0.2",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
-    "vue": "^3.0.0",
-    "vue-router": "4"
-  },
-  "devDependencies": {
-    "@types/graphql-fields": "^1.3.3",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/eslint-config-typescript": "^7.0.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0",
-    "lint-staged": "^9.5.0",
-    "sass": "^1.32.11",
-    "sass-loader": "^10.1.1",
-    "ts-node": "^9.1.1",
-    "ts-node-dev": "^1.1.6",
-    "typegraphql-prisma": "^0.13.0",
-    "typescript": "~4.1.5"
-  },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue,ts,tsx}": [
-      "vue-cli-service lint",
-      "git add"
-    ]
-  }
+  "workspaces": [
+    "packages/*"
+  ]
 }
